[tool.poetry]
name = "PyTinyTeX"
version = "0.3.1"
description = "Thin wrapper for \"TinyTeX\" (MIT)"
authors = ["JessicaTegner <jessica.tegner@outlook.com>"]
license = "mit"
readme = "readme.md"
repository = "https://github.com/JessicaTegner/PyTinyTeX"

classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'Operating System :: POSIX',
        'Programming Language :: Python',
        'Topic :: Text Processing',
        'Topic :: Text Processing :: Filters',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy'
    ]

packages = [
    { include = "pytinytex" },
]

include = [
"LICENSE",
"readme.md",
]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
