[project]
name = "PyTinyTeX"
version = "0.3.4"
description = "Thin wrapper for \"TinyTeX\" (MIT)"
license = {text = "MIT"}
authors = [{name = "JessicaTegner", email = "jessica@jessicategner.com"}]
readme = "readme.md"
keywords = ["TinyTeX", "LaTeX", "TeX", "PDF", "wrapper", "Python", "pypandoc", "pandoc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

requires-python = ">=3.8"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
